# LarpSlop-Agent

./: .gitignore  .mcp.json  AGENT-TEAM-BLUEPRINT.md  CLAUDE.md  CONTENT-INTEL-PROTOCOL.md  Daily Agent Refresh.bat  HANDOFF.md  NEW-ENVIRONMENT-HANDOFF.md  NEXT-SESSION-AUTONOMOUS-PROMPT.md  README.md  SESSION-COMPACT-2026-06-13.md  SESSION-COMPACT-2026-06-14.md  SESSION-COMPACT-2026-06-15.md  SESSION-COMPACT-2026-06-16.md  SESSION-COMPACT-2026-06-17.md  SESSION-COMPACT-2026-06-24-color-stretch.md  SESSION-COMPACT-2026-06-24.md  SESSION-COMPACT-2026-06-25.md  SESSION-COMPACT-2026-06-26-g1-resolve.md  SESSION-COMPACT-2026-06-26.md  SESSION-COMPACT-2026-06-27-lookstack-video.md  SESSION-COMPACT-2026-06-28.md  SESSION-COMPACT-2026-06-29.md  SESSION-HANDOFF-2026-06-24-overnight-research.md  SESSION-HANDOFF-2026-06-26-carousel-studio.md  Weekly Agent Refresh.bat  _vault_linker.py
.claude/: settings.json
auto-clip/: COLOR-BUILD-STATUS.md  README.md  broll_planner.py  caption.py  color.py  extract_repo.py  facetrack.py  highlight.py  library.py  (+4 more)
colorkit/: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
colorkit/colorkit/: __init__.py  __main__.py  accel.py  cli.py  decide.py  hdr.py  io_utils.py  luts.py  segment.py  stylize.py
colorkit/colorkit/luts/: bleach_bypass.cube  clean_pop.cube  fuji_style.cube  golden_hour.cube  kodak_2383_style.cube  moody_blue.cube  neutral_correct.cube  portra_style.cube  teal_orange.cube  warm_interview.cube
colorkit/tests/: test_decide.py  test_look_stack.py  test_scopes.py  test_skin_solve.py  test_smoke.py
(+380 files in other folders)
